# EdgeGraph3D

./: .gitignore  CMakeLists.txt  README.md
example/dtu006/: README.md  download_imgs.sh  sample_usage.sh  target_camera_poses.txt
include/coordinate_system_transform/: transform_coordinate_system.hpp
include/edgegraph3d/: edge_matcher.hpp
include/edgegraph3d/edge_managers/: edge_manager.hpp  input_segments_edge_manager.hpp  plg_edge_manager.hpp  plg_edge_manager_closest_only.hpp  segment_edge_manager.hpp  segment_edge_manager_detect_non_intersections.hpp  segmented_edge_images_edge_manager.hpp
include/edgegraph3d/filtering/: filtering_close_plgps.hpp  gauss_newton.hpp  outliers_filtering.hpp
include/edgegraph3d/io/input/: convert_edge_images_pixel_to_segment.hpp  edge_graph_3d_input_params.hpp
include/edgegraph3d/io/output/: output_point_cloud.hpp  output_sfm_data.hpp  output_utilities.hpp
include/edgegraph3d/matching/consensus_manager/: plgp_consensus_manager.hpp  plgpcm_3views_plg_following.hpp
include/edgegraph3d/matching/plg_matching/: pipelines.hpp  plg_matches_manager.hpp  plg_matching.hpp  plg_matching_from_refpoints.hpp  polyline_2d_map.hpp  polyline_2d_map_search.hpp  polyline_matching.hpp
include/edgegraph3d/matching/polyline_matching/: community_detection_interface.hpp  polyline_matcher.hpp
include/edgegraph3d/plgs/: graph.hpp  graph_adjacency_list.hpp  graph_adjacency_list_undirected.hpp  graph_adjacency_set_no_type.hpp  graph_adjacency_set_undirected_no_type.hpp  graph_adjacency_set_undirected_no_type_weighted.hpp  graph_edge_adjacency_list.hpp  graph_no_type.hpp  plg_handling.hpp  polyline_graph_2d.hpp  polyline_graph_2d_hmap_impl.hpp  polyline_graph_3d.hpp  polyline_graph_3d_hmap_impl.hpp
include/edgegraph3d/utils/: data_bundle.hpp  datatypes.hpp  drawing_utilities.hpp  edge_graph_3d_utilities.hpp  plg_analysis_utilities.hpp  serialization_utilities.hpp  test_utilities.hpp
include/edgegraph3d/utils/geometry/: geometric_utilities.hpp  triangulation.hpp
include/edgegraph3d/utils/globals/: global_defines.hpp  global_switches.hpp
include/utils/: NotImplementedException.hpp
src/coordinate_system_transform/: transform_coordinate_system.cpp
src/edgegraph3d/: edge_graph_3d.cpp  edge_matcher.cpp
src/edgegraph3d/edge_managers/: edge_manager.cpp  input_segments_edge_manager.cpp  plg_edge_manager.cpp  plg_edge_manager_closest_only.cpp  segment_edge_manager.cpp  segment_edge_manager_detect_non_intersections.cpp  segmented_edge_images_edge_manager.cpp
src/edgegraph3d/filtering/: filtering_close_plgps.cpp  gauss_newton.cpp  outliers_filtering.cpp
src/edgegraph3d/io/input/: convert_edge_images_pixel_to_segment.cpp  edge_graph_3d_input_params.cpp
src/edgegraph3d/io/output/: output_point_cloud.cpp  output_sfm_data.cpp  output_utilities.cpp
src/edgegraph3d/matching/consensus_manager/: plgp_consensus_manager.cpp  plgpcm_3views_plg_following.cpp
src/edgegraph3d/matching/plg_matching/: pipelines.cpp  plg_matches_manager.cpp  plg_matching.cpp  plg_matching_from_refpoints.cpp  polyLine_2d_map.cpp  polyLine_2d_map_search.cpp  polyline_matching.cpp
src/edgegraph3d/matching/polyline_matching/: community_detection_interface.cpp  polyline_matcher.cpp
src/edgegraph3d/plgs/: graph_adjacency_set_no_type.cpp  graph_adjacency_set_undirected_no_type.cpp  graph_adjacency_set_undirected_no_type_weighted.cpp  graph_no_type.cpp  plg_handling.cpp  polyline_graph_2d.cpp  polyline_graph_2d_hmap_impl.cpp  polyline_graph_3d.cpp  polyline_graph_3d_hmap_impl.cpp
src/edgegraph3d/utils/: datatypes.cpp  drawing_utilities.cpp  edge_graph_3d_utilities.cpp  plg_analysis_utilities.cpp  test_utilities.cpp
src/edgegraph3d/utils/geometry/: geometric_utilities.cpp  triangulation.cpp
src/utils/: coordinate_system_transform.cpp  filter.cpp  json_to_ply.cpp
